--- a/index.html
+++ b/index.html
@@ -1,156 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Diary - Tae Kyung Kim</title>
-  <style>
-    body {
-      font-family: "Georgia", serif;
-      background: #fffaf0; /* 편지지 느낌 아이보리 */
-      background-image: 
-        repeating-linear-gradient(
-          to bottom,
-          transparent,
-          transparent 28px,
-          rgba(200, 200, 200, 0.2) 28px,
-          rgba(200, 200, 200, 0.2) 30px
-        );
-      color: #222;
-      padding: 60px;
-      line-height: 1.5;
-      font-size: 20px;
-    }
+<meta charset="UTF-8">
+<title>Diary of Feelings</title>
+<style>
+body {
+  font-family: "Georgia", serif;
+  background: #fffaf0;
+  background-image: repeating-linear-gradient(
+    to bottom,
+    transparent,
+    transparent 28px,
+    rgba(200, 200, 200, 0.2) 28px,
+    rgba(200, 200, 200, 0.2) 30px
+  );
+  color: #222;
+  padding: 60px;
+  line-height: 1.5;
+  font-size: 20px;
+  overflow-x: hidden;
+  transition: background 0.6s ease, color 0.6s ease;
+}
 
-    h1 {
-      font-weight: 500;
-      font-size: 28px;
-    }
+h1 {
+  font-weight: 500;
+  font-size: 28px;
+  opacity: 0.9;
+}
 
-    #output {
-      margin-top: 40px;
-      min-height: 200px;
-      word-wrap: break-word;
-      white-space: pre-wrap;
-    }
+/* 감정 선택 화면 */
+#mood-selector {
+  position: fixed;
+  inset: 0;
+  background: rgba(255, 255, 250, 0.94);
+  backdrop-filter: blur(5px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  transition: opacity 0.6s ease;
+}
 
-    .letter {
-      display: inline-block;
-      vertical-align: middle;
-      transition: font-size 0.2s ease, color 0.3s ease;
-      font-weight: 400;
-      position: relative;
-      letter-spacing: 2px;
-      text-align: center;
-      min-width: 1ch;
-      line-height: 1;
-    }
+#mood-text {
+  font-size: 24px;
+  color: #444;
+  opacity: 0;
+  transform: translateY(-20px);
+  text-align: center;
+  animation: fadeDown 2.2s ease forwards;
+}
 
-    /* 긋기 효과 */
-    .scratched::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 50%;
-      height: 2px;
-      background: linear-gradient(
-        90deg,
-        rgba(30, 0, 0, 0.9) 0%,
-        rgba(80, 0, 30, 0.8) 50%,
-        rgba(0, 0, 0, 0.9) 100%
-      );
-      transform: rotate(var(--angle));
-      transform-origin: center;
-      animation: scratch 0.25s ease-out;
-      border-radius: 2px;
-      filter: blur(0.4px);
-      box-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
-    }
+@keyframes fadeDown {
+  0% { opacity: 0; transform: translateY(-20px); }
+  100% { opacity: 1; transform: translateY(0); }
+}
 
-    @keyframes scratch {
-      from { width: 0; opacity: 0; }
-      to { width: 100%; opacity: 1; }
-    }
-  </style>
+/* 버튼 */
+#mood-buttons {
+  margin-top: 30px;
+  opacity: 0;
+  transform: translateY(15px);
+  transition: all 1s ease;
+  display: flex;
+  gap: 20px;
+}
+
+#mood-selector.show-buttons #mood-buttons {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+#mood-buttons button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  color: #555;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+#mood-buttons button:hover {
+  color: #222;
+  transform: scale(1.1);
+}
+
+/* 글자 */
+.letter {
+  display: inline-block;
+  position: relative;
+  opacity: 0;
+  transform: translateY(6px);
+  transform-origin: center center;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  animation-delay: calc(var(--random-delay) * 1s);
+  min-width: 1ch;
+}
+
+.letter.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* 감정별 모드 */
+body.mood-sad {
+  background-color: #f8f7f6;
+  color: #555;
+}
+body.mood-sad .letter {
+  animation: sadVibe 1.6s infinite ease-in-out;
+}
+@keyframes sadVibe {
+  0%,100% { transform: translate(0,0); }
+  25% { transform: translate(-0.4px,0.6px); }
+  50% { transform: translate(0.5px,-0.4px); }
+  75% { transform: translate(-0.3px,0.3px); }
+}
+
+/* 행복 */
+body.mood-happy {
+  background-color: #fffdf5;
+  color: #5a3800;
+}
+body.mood-happy .letter {
+  animation: happyFloat 1.1s infinite ease-in-out;
+}
+@keyframes happyFloat {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-2px); }
+}
+
+/* 화남 */
+body.mood-angry {
+  background-color: #fff5f5;
+  color: #600;
+}
+body.mood-angry .letter {
+  animation: angryShake 0.4s infinite ease-in-out;
+}
+@keyframes angryShake {
+  0%,100% { transform: translate(0, 0); }
+  25% { transform: translate(2px, -1px); }
+  50% { transform: translate(-2px, 1px); }
+  75% { transform: translate(1px, 1px); }
+}
+
+/* 긋기 */
+.scratched::after {
+  content: "";
+  position: absolute;
+  left: 0; right: 0;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(
+    90deg,
+    rgba(30, 0, 0, 0.9),
+    rgba(100, 0, 20, 0.7)
+  );
+  transform: rotate(var(--angle));
+  animation: scratch 0.25s ease-out;
+  border-radius: 2px;
+}
+@keyframes scratch {
+  from { width: 0; opacity: 0; }
+  to { width: 100%; opacity: 1; }
+}
+
+/* 별 */
+@keyframes drawStar { to { stroke-dashoffset: 0; } }
+</style>
 </head>
 <body>
-  <h1>Diary: Tae Kyung Kim</h1>
-  <p>Hold your feelings on the keyboard — they grow, fade, and leave traces.</p>
-  <div id="output"></div>
+<div id="mood-selector">
+  <div id="mood-text">Choose your feeling today</div>
+  <div id="mood-buttons">
+    <button data-mood="sad">Sad</button>
+    <button data-mood="happy">Happy</button>
+    <button data-mood="angry">Angry</button>
+  </div>
+</div>
 
-  <script>
-    const outputEl = document.getElementById("output");
-    let keyHoldStart = {};
-    const scratchSounds = [
-      "https://actions.google.com/sounds/v1/office/pen_scribble.ogg",
-      "https://actions.google.com/sounds/v1/office/pencil_scribble.ogg"
-    ];
+<h1>Diary of Feelings</h1>
+<p>Each letter carries a piece of your mood.</p>
+<div id="output"></div>
 
-    document.addEventListener("keydown", (event) => {
-      if (keyHoldStart[event.key]) return;
-      keyHoldStart[event.key] = Date.now();
+<script>
+const outputEl = document.getElementById("output");
+let keyHoldStart = {};
 
-      if (event.key === "Backspace") {
-        const letters = outputEl.querySelectorAll(".letter:not(.scratched)");
-        const last = letters[letters.length - 1];
-        if (last) {
-          last.classList.add("scratched");
-          last.style.setProperty("--angle", `${(Math.random() - 0.5) * 15}deg`);
-        }
+const selector = document.getElementById("mood-selector");
+const body = document.body;
 
-        const sound = new Audio(scratchSounds[Math.floor(Math.random() * scratchSounds.length)]);
-        sound.volume = 0.4;
-        sound.play();
-        event.preventDefault();
-        return;
-      }
-    });
+// 버튼 천천히 등장
+setTimeout(() => selector.classList.add("show-buttons"), 2500);
 
-    document.addEventListener("keyup", (event) => {
-      const start = keyHoldStart[event.key];
-      if (!start) return;
-      const duration = Date.now() - start;
-      delete keyHoldStart[event.key];
+selector.querySelectorAll("button").forEach(btn => {
+  btn.addEventListener("click", () => {
+    const mood = btn.getAttribute("data-mood");
+    body.className = `mood-${mood}`;
+    selector.style.opacity = 0;
+    setTimeout(() => selector.remove(), 800);
+  });
+});
 
-      if (event.key.length === 1 || event.key === " ") {
-        addLetter(event.key, duration);
-      } else if (event.key === "Enter") {
-        const br = document.createElement("br");
-        outputEl.appendChild(br);
-      }
-    });
-
-    function addLetter(char, duration) {
-      const el = document.createElement("span");
-      el.classList.add("letter");
-
-      el.textContent = char === " " ? " " : char;
-
-      // 글자 크기 증가
-      const intensity = duration / 150;
-      const baseSize = 20;
-      const size = baseSize + intensity * 15;
-      el.style.fontSize = `${size}px`;
-
-      // 색상: 커질수록 회색 → 검정
-      const hue = 0;
-      const sat = 0;
-      const light = Math.max(80 - intensity * 40, 10);
-      el.style.color = `hsl(${hue}, ${sat}%, ${light}%)`;
-
-      // 흔들림: 글자가 커질수록 강도 증가
-      if (intensity > 1) {
-        const shakeAmount = Math.min(intensity * 2, 5); // 최대 5px
-        setInterval(() => {
-          const x = (Math.random() - 0.5) * shakeAmount;
-          const y = (Math.random() - 0.5) * shakeAmount;
-          el.style.transform = `translate(${x}px, ${y}px)`;
-        }, 50);
-      }
-
-      outputEl.appendChild(el);
-      window.scrollTo(0, document.body.scrollHeight);
+document.addEventListener("keydown", e => {
+  if (e.key === "Backspace") {
+    const letters = outputEl.querySelectorAll(".letter:not(.scratched)");
+    const last = letters[letters.length - 1];
+    if (last) {
+      last.classList.add("scratched");
+      last.style.setProperty("--angle", `${(Math.random() - 0.5) * 15}deg`);
     }
-  </script>
+    e.preventDefault();
+    return;
+  }
+  if (!keyHoldStart[e.key]) keyHoldStart[e.key] = Date.now();
+});
+
+document.addEventListener("keyup", e => {
+  const start = keyHoldStart[e.key];
+  if (!start) return;
+  const duration = Date.now() - start;
+  delete keyHoldStart[e.key];
+
+  if (e.key.length === 1 || e.key === " ") addLetter(e.key, duration);
+  else if (e.key === "Enter") outputEl.appendChild(document.createElement("br"));
+});
+
+function addLetter(char, duration) {
+  const el = document.createElement("span");
+  el.classList.add("letter");
+  el.style.setProperty("--random-delay", Math.random().toFixed(2));
+
+  if (char === "*") {
+    const isLong = duration > 400;
+    const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+    const size = isLong ? 70 : 40;
+    svg.setAttribute("width", size);
+    svg.setAttribute("height", size);
+    svg.setAttribute("viewBox", "0 0 120 120");
+    svg.style.verticalAlign = "middle";
+    svg.style.margin = "0 4px";
+
+    const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
+    path.setAttribute("d","M60 10 L75 45 L115 45 L82 70 L95 110 L60 85 L25 110 L38 70 L5 45 L45 45 Z");
+    path.setAttribute("fill","none");
+    path.setAttribute("stroke","#d00");
+    path.setAttribute("stroke-width", isLong ? "6" : "3.5");https://github.com/taekyng1205/letters/blob/main/index.html#L1C0-L156C7
+    path.setAttribute("stroke-linecap","round");
+    path.setAttribute("stroke-linejoin","round");
+    path.style.strokeDasharray = 600;
+    path.style.strokeDashoffset = 600;
+    path.style.animation = "drawStar 1.2s ease forwards";
+    svg.appendChild(path);
+    el.appendChild(svg);
+  } else {
+    el.textContent = char === " " ? " " : char;
+  }
+
+  const intensity = duration / 150;
+  const baseSize = 20;
+  const size = baseSize + intensity * 15;
+  el.style.fontSize = `${size}px`;
+  el.style.transformOrigin = "center center";
+
+  outputEl.appendChild(el);
+  setTimeout(() => el.classList.add("visible"), 10);
+  window.scrollTo(0, document.body.scrollHeight);
+}
+</script>
 </body>
 </html>
+
