--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ function addLetter(char, duration) {
     path.setAttribute("d","M60 10 L75 45 L115 45 L82 70 L95 110 L60 85 L25 110 L38 70 L5 45 L45 45 Z");
     path.setAttribute("fill","none");
     path.setAttribute("stroke","#d00");
-    path.setAttribute("stroke-width", isLong ? "6" : "3.5");https://github.com/taekyng1205/letters/blob/main/index.html#L1C0-L156C7
+    path.setAttribute("stroke-width", isLong ? "6" : "3.5");
     path.setAttribute("stroke-linecap","round");
     path.setAttribute("stroke-linejoin","round");
     path.style.strokeDasharray = 600;
